@@ -58,7 +58,6 @@
       <department>ECAS: Ofc Undergrad Education</department>
       <department>Mc Tyeire Trimble Halls</department>     
       <netid>efricke</netid> <!-- honors - Elizabeth Fricker -->
-      <netid>jreiff</netid>  <!-- honors - Joseph Reiff -->   
     </admin>
     <submission_fields>
       <required>title</required>
